Update LanguageManagerMixin.java (#51)